ISSUP-6101 move marketplace APIs to separate module/scope
