# modules/dxp/apps/osb/osb-provisioning/osb-provisioning-marketplace/osb-provisioning-marketplace-rest-api/src/main/java/com/liferay/osb/provisioning/marketplace/rest/dto/v1_0/util/AppLicenseKeyUtil.java
@@ -3,10 +3,10 @@
  * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
  */
 
-package com.liferay.osb.provisioning.rest.dto.v1_0.util;
+package com.liferay.osb.provisioning.marketplace.rest.dto.v1_0.util;
 
 import com.liferay.osb.provisioning.license.model.LicenseKey;
-import com.liferay.osb.provisioning.rest.dto.v1_0.AppLicenseKey;
+import com.liferay.osb.provisioning.marketplace.rest.dto.v1_0.AppLicenseKey;
 
 /**
  * @author Amos Fong
