# modules/dxp/apps/osb/osb-provisioning/osb-provisioning-rest/osb-provisioning-rest-impl/rest-openapi.yaml
@@ -1,130 +1,5 @@
 components:
-    parameters:
-        AgentName:
-            in: query
-            description:
-                The name of the user doing the action. If it is an automated action, this can be left blank.
-            name: agentName
-            required: false
-            schema:
-                type: string
-        AgentUID:
-            in: query
-            description:
-                The UUID of the user doing the action. If it is an automated action, this can be left blank.
-            name: agentUID
-            required: false
-            schema:
-                type: string
     schemas:
-        AppLicenseKey:
-            description:
-                Represents a DXP App license key.
-            properties:
-                active:
-                    description:
-                        If the license key is active or not.
-                    readOnly: true
-                    type: boolean
-                complimentary:
-                    description:
-                        If the license key counts towards the customer's purchase.
-                    readOnly: true
-                    type: boolean
-                createDate:
-                    description:
-                        The create date of the license key.
-                    format: date-time
-                    readOnly: true
-                    type: string
-                description:
-                    description:
-                        The description of the license key.
-                    type: string
-                expirationDate:
-                    description:
-                        The date the license key expires.
-                    format: date-time
-                    type: string
-                hostName:
-                    description:
-                        The host name of the license key.
-                    type: string
-                id:
-                    description:
-                        The id of the license key.
-                    format: int64
-                    type: integer
-                ipAddresses:
-                    description:
-                        The IP addresses of the license key.
-                    type: string
-                key:
-                    description:
-                        The hash key of the license key.
-                    readOnly: true
-                    type: string
-                licenseType:
-                    description:
-                        The name of the license entry of the license key.
-                    enum: ["developer", "enterprise", "oem", "production", "virtual-cluster"]
-                    type: string
-                macAddresses:
-                    description:
-                        The MAC addresses of the license key.
-                    type: string
-                modifiedDate:
-                    description:
-                        The last date the license key was modified.
-                    format: date-time
-                    readOnly: true
-                    type: string
-                modifiedUserName:
-                    description:
-                        The name of the user who last modified the license key.
-                    readOnly: true
-                    type: string
-                modifiedUserUuid:
-                    description:
-                        The uuid of the user who last modified the license key.
-                    readOnly: true
-                    type: string
-                orderId:
-                    description:
-                        The order Id license key belongs to.
-                    type: string
-                owner:
-                    description:
-                        The owner of the license key.
-                    type: string
-                productId:
-                    description:
-                        The id of the product of the license key.
-                    type: string
-                productName:
-                    description:
-                        The name of the product of the license key.
-                    type: string
-                productVersion:
-                    description:
-                        The version of the product of the license key.
-                    type: string
-                startDate:
-                    description:
-                        The date the license key can start being used.
-                    format: date-time
-                    type: string
-                userName:
-                    description:
-                        The name of the user who created the license key.
-                    readOnly: true
-                    type: string
-                userUuid:
-                    description:
-                        The uuid of the user who created the license key.
-                    readOnly: true
-                    type: string
-            type: object
         LicenseKey:
             description:
                 Represents a license key.
@@ -736,158 +611,6 @@ paths:
                                 format: binary
                                 type: string
             tags: ["LicenseKey"]
-    "/app-license-keys":
-        get:
-            description:
-                Retrieves the app license keys. Results can be paginated, filtered, searched, and sorted.
-            operationId: getAppLicenseKeysPage
-            parameters:
-                - in: query
-                  name: filter
-                  schema:
-                      type: string
-                - in: query
-                  name: page
-                  schema:
-                      type: integer
-                - in: query
-                  name: pageSize
-                  schema:
-                      type: integer
-                - in: query
-                  name: search
-                  schema:
-                      type: string
-                - in: query
-                  name: sort
-                  schema:
-                      type: string
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/AppLicenseKey"
-                                type: array
-                        application/xml:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/AppLicenseKey"
-                                type: array
-            tags: ["AppLicenseKey"]
-        post:
-            description:
-                Generates an app license key.
-            operationId: postAppLicenseKey
-            parameters:
-                - $ref: "#/components/parameters/AgentName"
-                - $ref: "#/components/parameters/AgentUID"
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: "#/components/schemas/AppLicenseKey"
-                    application/xml:
-                        schema:
-                            $ref: "#/components/schemas/AppLicenseKey"
-                required: true
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/AppLicenseKey"
-                        application/xml:
-                            schema:
-                                $ref: "#/components/schemas/AppLicenseKey"
-            tags: ["AppLicenseKey"]
-    "/app-license-keys/activate":
-        put:
-            description:
-                Activates app license keys.
-            operationId: putAppLicenseKeyActivate
-            parameters:
-                - $ref: "#/components/parameters/AgentName"
-                - $ref: "#/components/parameters/AgentUID"
-                - in: query
-                  name: appLicenseKeyIds
-                  required: true
-                  schema:
-                      items:
-                          format: int64
-                          type: integer
-                      type: array
-            responses:
-                204:
-                    content:
-                        application/json: {}
-                        application/xml: {}
-            tags: ["AppLicenseKey"]
-    "/app-license-keys/deactivate":
-        put:
-            description:
-                Deactivates app license keys.
-            operationId: putAppLicenseKeyDeactivate
-            parameters:
-                - $ref: "#/components/parameters/AgentName"
-                - $ref: "#/components/parameters/AgentUID"
-                - in: query
-                  name: appLicenseKeyIds
-                  required: true
-                  schema:
-                      items:
-                          format: int64
-                          type: integer
-                      type: array
-            responses:
-                204:
-                    content:
-                        application/json: {}
-                        application/xml: {}
-            tags: ["AppLicenseKey"]
-    "/app-license-keys/{appLicenseKeyId}":
-        get:
-            description:
-                Retrieves the app license key.
-            operationId: getAppLicenseKey
-            parameters:
-                - in: path
-                  name: appLicenseKeyId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/AppLicenseKey"
-                        application/xml:
-                            schema:
-                                $ref: "#/components/schemas/AppLicenseKey"
-            tags: ["AppLicenseKey"]
-    "/app-license-keys/{appLicenseKeyId}/download":
-        get:
-            description:
-                Downloads an XML of the app license key.
-            operationId: getAppLicenseKeyDownload
-            parameters:
-                - in: path
-                  name: appLicenseKeyId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/xml:
-                            schema:
-                                format: binary
-                                type: string
-            tags: ["AppLicenseKey"]
     "/license-keys/activate":
         put:
             description:
